--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ article {
 .table-container {
     background-color: #fff;
     padding: 20px;
+    margin: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -90,6 +91,7 @@ table tbody tr:hover {
     background-color: #fff;
     padding: 20px 40px;
     display: flex;
+    margin: 20px;
     flex-direction: column;
     justify-content: center;
     border-radius: 8px;
@@ -105,6 +107,7 @@ p{
     background-color: #fff;
     padding: 20px 40px;
     display: flex;
+    margin: 20px;
     justify-content: center;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -155,8 +158,6 @@ textarea {
 textarea {
     resize: vertical;
 }
-
-
 
 
 button {
